[package]
name = "hydrapool"
version = "2.1.0"
edition = "2024"
rust-version = "1.88.0"
authors = ["Kulpreet Singh<kp@opdup.com>"]
license = "AGPLv3"
description = "Hydrapool - an open source PPLNS pool for bitcoin"
readme = "README.md"
homepage = "https://hydrapool.org/"
repository = "https://github.com/256-Foundation/Hydra-Pool/"
keywords = ["bitcoin", "mining", "pool", "p2p"]
categories = ["cryptography::cryptocurrencies"]
exclude=["tests"]
default-run = "hydrapool"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bitcoin = { version = "0.32.5", features = ["serde", "rand"] }
tokio = { version = "1.0", features = ["full"] }
p2poolv2_lib = { git = "https://github.com/p2poolv2/p2poolv2", package = "p2poolv2_lib", tag = "hydrapool.v0.4.1" }
p2poolv2_cli = { git = "https://github.com/p2poolv2/p2poolv2", package = "p2poolv2_cli", tag = "hydrapool.v0.4.1" }
p2poolv2_api = { git = "https://github.com/p2poolv2/p2poolv2", package = "p2poolv2_api", tag = "hydrapool.v0.4.1" }
bitcoindrpc = { git = "https://github.com/p2poolv2/p2poolv2", package = "bitcoindrpc", tag = "hydrapool.v0.4.1" }

[[bin]]
name = "hydrapool"
test = false
bench = false

[[bin]]
name = "hydrapool_cli"
test = false
bench = false

[package.metadata.deb]
maintainer = "Kulpreet Singh <kp@opdup.com>"
copyright = "2024, Kulpreet Singh <kp@opdup.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
Hydrapool is an open source Bitcoin mining pool with support for solo mining \
and PPLNS (Pay Per Last N Shares) accounting. Features include:\n\
  - Run a private solo pool or PPLNS pool\n\
  - Payouts made directly from coinbase (no custody)\n\
  - API for downloading and validating share accounting\n\
  - Compatible with any bitcoin RPC node"""
depends = "$auto, systemd"
section = "net"
priority = "optional"
assets = [
    ["target/release/hydrapool", "usr/bin/", "755"],
    ["target/release/hydrapool_cli", "usr/bin/", "755"],
    ["config.toml", "etc/hydrapool/config.toml", "644"],
]
conf-files = ["/etc/hydrapool/config.toml"]
maintainer-scripts = "packages/debian/"
systemd-units = { enable = false }
